# BGM220_SGP40_BLE_SENSOR_BEACON

./: .projectlinkstore  README.md  app.c  sgp40_air_beacon.slcp  sht31.c  sht31.h  vscode.conf
cmake_gcc/: CMakeLists.txt  CMakePresets.json  sgp40_air_beacon.cmake
config/: pin_config.h  sl_i2cspm_i2c_sgp_config.h
